fix: delete city function
