# docs/swagger.json
@@ -403,231 +403,6 @@
                 }
             }
         },
-        "/city": {
-            "get": {
-                "description": "Mengembalikan daftar seluruh kota",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "City"
-                ],
-                "summary": "Ambil semua kota",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.City"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Menambahkan data kota baru ke dalam sistem (khusus admin)",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "City"
-                ],
-                "summary": "Tambah kota baru",
-                "parameters": [
-                    {
-                        "description": "Data Kota",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.CityRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.City"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/city/{id}": {
-            "get": {
-                "description": "Mengembalikan detail satu kota",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "City"
-                ],
-                "summary": "Ambil kota berdasarkan ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "City ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.City"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Menghapus data kota berdasarkan ID (khusus admin)",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "City"
-                ],
-                "summary": "Hapus kota",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "City ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "patch": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Memperbarui data kota berdasarkan ID (khusus admin)",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "City"
-                ],
-                "summary": "Update kota",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "City ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Data Kota",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.CityRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.City"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/film": {
             "get": {
                 "description": "Mengembalikan seluruh daftar film beserta genrenya",
@@ -2366,28 +2141,6 @@
                 "city_id": {
                     "type": "integer",
                     "example": 1
-                }
-            }
-        },
-        "models.City": {
-            "type": "object",
-            "properties": {
-                "city_name": {
-                    "type": "string",
-                    "example": "Jakarta"
-                },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                }
-            }
-        },
-        "models.CityRequest": {
-            "type": "object",
-            "properties": {
-                "city_name": {
-                    "type": "string",
-                    "example": "Jakarta"
                 }
             }
         },
